--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@types/three": "^0.144.0",
+    "@vueform/slider": "^2.1.5",
     "apexcharts": "^3.35.5",
     "core-js": "^3.8.3",
     "moment": "^2.29.4",
+    "multi-range-slider-vue": "^1.1.4",
     "stats-js": "^1.0.1",
     "three": "^0.144.0",
     "three-obj-mtl-loader": "^1.0.3",
@@ -20,6 +22,7 @@
     "vue": "^3.2.13",
     "vue-generate-component": "^3.0.1",
     "vue-router": "^4.1.5",
+    "vue-time-slider": "^1.0.5",
     "vue-timeline-component": "^0.1.6",
     "vue3-apexcharts": "^1.4.1"
   },
