--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@types/three": "^0.144.0",
     "@vueform/slider": "^2.1.5",
+    "ant-design-vue": "^3.2.12",
     "apexcharts": "^3.35.5",
     "core-js": "^3.8.3",
     "moment": "^2.29.4",
